--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.4-canary.1",
     "babel-eslint": "10.0.1",
-    "bootstrap": "4.3.1",
+    "bootstrap": "4.4.1",
     "cacheable-response": "^1.9.1",
     "classnames": "2.2.6",
     "colors": "1.3.3",
@@ -59,6 +59,7 @@
     "react": "^16.8.4",
     "react-device-detect": "^1.9.9",
     "react-dom": "^16.8.4",
+    "reactstrap": "8.0.1",
     "react-markdown": "^4.2.2",
     "webpack": "4.38.0"
   },
