--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "now-build": "npm run build",
     "analyze": "cross-env BUNDLE_ANALYZE=true next build ",
-    "dev": "node ./bin/blog.js && node server.js",
+    "dev": "node server.js",
     "env": "node ./bin/env.js",
     "build": "next build ",
-    "postinstall": "node ./bin/blog.js",
     "start": "cross-env NODE_ENV=production npm run build && cross-env NODE_ENV=production node server.js",
     "lint": "eslint ."
   },
@@ -49,12 +48,14 @@
     "merge-deep": "^3.0.2",
     "mocha": "6.2.0",
     "moment": "^2.24.0",
-    "next": "9.0.4",
+    "next": "^9.1.4",
     "next-offline": "4.0.3",
     "nightwatch": "^1.2.1",
     "node-sass": "4.14.1",
     "prettier": "1.15.2",
     "prop-types": "15.7.2",
+    "prismic-javascript": "3.0.1",
+    "prismic-reactjs": "^1.1.2",
     "raw-loader": "^4.0.0",
     "react": "^16.8.4",
     "react-device-detect": "^1.9.9",
