Search and replace BT to Flagsmith New logo Started on the colours

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Bullet Train",
-  "name": "Bullet Train",
+  "short_name": "Flagsmith",
+  "name": "Flagsmith",
   "icons": [
     {
       "src": "/static/icons-192.png",
