--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bullet-train-homepage",
+  "name": "flagsmith-train-homepage",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
