--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "now-build": "npm run build",
     "analyze": "cross-env BUNDLE_ANALYZE=true next build ",
     "dev": "node server.js",
-    "env": "node ./bin/env.js",
+    "postinstall": "npm run env_script",
+    "env_script": "node ./bin/env.js",
     "build": "next build ",
     "start": "cross-env NODE_ENV=production npm run build && cross-env NODE_ENV=production node server.js",
     "lint": "eslint ."
